# trackeditor

./: .gitignore
include/: backdrop.h  camera.h  controls.h  font.h  logo.h  menu.h  messageq.h  model.h  multiplay.h  net.h  objects.h  particles.h  quat.h  replay.h  replay.h.bak  sound.h  sound.h.fmod  sound.h.openal  terrain.h  timer.h  trees.h  utility.h  vamosworld.h  weather.h
osx/: Info.plist  trackeditor-Prefix.pch
osx/Fmod/: fmod.h
osx/SDL.framework/.svn/: entries
osx/trackeditor.xcodeproj/: project.pbxproj
osx/vamos/: ChangeLog  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac
osx/vamos/body/: Aerodynamic_Device.cc  Aerodynamic_Device.h  Car.cc  Car.h  Car_Reader.cc  Gl_Car.cc  Gl_Car.h  Makefile.am  Makefile.in  Particle.h  Rigid_Body.cc  Rigid_Body.h  Suspension.cc  Tire.cc  Wheel.cc  Wheel.h
osx/vamos/caelum/: Makefile.in
osx/vamos/config/: Makefile.in
osx/vamos/data/: Makefile.in
osx/vamos/doc/: Makefile.in  vamos.info  vamos.texi
osx/vamos/geometry/: Circular_Buffer.h  Contact_Info.h  Interpolator.h  Linear_Interpolator.cc  Linear_Interpolator.h  Makefile.am  Makefile.in  Numeric.h  PID.cc  PID.h  Rectangle.cc  Rectangle.h  Spline.cc  Spline.h  test_Numeric.cc  test_Spline.cc
osx/vamos/media/: Makefile.in  Sample.h  Texture_Image.cc  Texture_Image.h
osx/vamos/scripts/: Makefile.in
osx/vamos/track/: Gl_Road_Segment.cc  Gl_Road_Segment.h  Makefile.am  Makefile.in  Road_Segment.cc  Road_Segment.h  Strip_Track.cc  Strip_Track.h  Strip_Track_Reader.cc
src/: main.cpp  sound.cpp.openal  utility.cpp
(+56 files in other folders)
